Add graceful entity missing case handling in repo
